ags (0.5.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed grained control range
	* fixed more precise time calculation
	* fixed AgsDial wrong arithmetic expression
	* fixed time calculation

ags (0.5.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed cliped LADSPA data

ags (0.5.8)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed auto-scroll
	* fixed time calculation
	* fixed copy & paste
	* fixed ruler
	* fixed crash during extensive scrolling
	* fixed export duration and difference to playback time

ags (0.5.7)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed crash during unavailable audio file
	* fixed buffer size preference for thread frequencies

ags (0.5.6)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leaks related to GValue in recalls
	* fixed memory leaks in ags_display_tact_launch() as well for ags_toggle_led_launch() and in some GUI callbacks of them
	* fixed memory leak AgsReturnableThread to clean disconnect handler
	* fixed thread frequencies and delays
	* implemented code alter macro AGS_USE_TIMER

ags (0.5.5)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* enhanced thread-safety
	* fixed ags.conf per file base
	* reducing thread-cycles per second in order to target performance problems
	* fixed allocation of ags-buffer

ags (0.5.4)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented ags.conf per file base
	* cleaned-up recalls allocation

ags (0.5.3)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed export duration
	* fixed improved AgsDial
	* fixed dead-lock for to many calls to AgsChannelThread

ags (0.5.2)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed memory leaks accessing AgsConfig
	* fixed dead-lock while stop playback
	* improved drawing of animations

ags (0.5.1)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]